# image_compressor

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/formats/: jpg.rs  mod.rs  png.rs
