[package]
name = "image_compressor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
image = "0.24.4"
anyhow = "1.0.58"
clap = { version = "3.2.23", features = ["derive"] }