[package]
name = "image_compressor"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
image = { features = ["jpeg", "gif", "png", "bmp"], default-features = false, version = "0.24.4" }
anyhow = "1.0.58"
clap = { version = "3.2.25", features = ["derive", "std"], default-features = false }
